--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="overview-hero">
             <div class="container">
                 <div class="overview-hero-image">
-                    <img src="jonathan-borba-lrQPTQs7nQQ-unsplash.jpg" alt="woman doing sit-ups">
+                    <img src="vector-happy-woman-exercising-in-the-park.jpg" alt="woman stretching">
                 </div>
                 <div class="overview-hero-text ">
                     <h2>Live your healthiest life now!</h2>
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="fitness+.jpg" alt="fitness app display">
+                        <img src="sport-and-fitness-tracker-illustration-design-concept-vector.jpg" alt="fitness app display">
                         <div class="card-body">
                             <h3>Fitness+ Tracker</h3>
                             <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
